<resources>
    <string name="app_name">@string/app_name_en</string>
    <string name="app_name_ja">ついいとおかし</string>
    <string name="app_name_en">Tweet-Okashi</string>
    <string name="twitter_callback_url">callback://TwitterOAuthActivity</string>
    <string name="image_view_icon_description">icon</string>
    <string name="title_tweet_count">ツイート</string>
    <string name="title_follow_count">フォロー</string>
    <string name="title_follower_count">フォロワー</string>
    <string name="title_retweet_count">RT</string>
    <string name="title_retweet_count_done">RT済</string>
    <string name="title_fav_count">FAV</string>
    <string name="title_fav_count_done">FAV済</string>
    <string name="title_retweeted_by">さんがリツイート</string>
    <string name="description_icon">画像</string>
    <string name="at">\@%1$s</string>
    <string name="error_twitter_exception">ツイッターエラー</string>
    <string name="timeline_page_name">TIMELINE</string>
    <string name="btn_tweet">ツイート</string>
    <string name="btn_update">更新</string>
    <string name="btn_search">検索</string>
    <string name="btn_updating">更新中</string>
    <string name="btn_reply">返信</string>
    <string name="btn_login">Twitterアカウントでログインする</string>
    <string name="text_login">ようこそ！</string>
    <string name="text_login_below">ついいとおかしへ</string>
    <string name="text_login_explanation">下のボタンを押してTwitterログインしてください</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">キャンセル</string>
    <string name="btn_haiku_create">俳句生成</string>
    <string name="btn_haiku_regenerate">俳句再生成</string>
    <string name="btn_haiku_retweet">俳句リツイート</string>
    <string name="btn_haiku_tweet">俳句のみツイート</string>
    <string name="text_haiku_result">俳句生成結果</string>
    <string name="text_hint_input">文章を入力してください</string>
    <string name="text_retweet">RT</string>
    <string name="text_favorite">FAV</string>
    <string name="text_hint_haiku_generate">ここに俳句が生成されます</string>
    <string name="at_twitter_account">\@tweetokashi</string>
    <string name="retweet_tag">#ついいとおかし</string>
    <string name="tweet_count">140</string>
    <string name="menu_setting">設定</string>
    <string name="menu_help">ヘルプ</string>
    <string name="menu_logout">ログアウト</string>
    <string name="menu_credit">クレジット</string>
    <string name="menu_tweet">ツイート</string>
    <string name="dialog_title">メニュー</string>
    <string name="dialog_retweet">リツイート</string>
    <string name="dialog_haikuretweet">俳句リツイート</string>
    <string name="dialog_usertimeline">　のツイートを表示</string>
    <string name="dialog_reply">このツイートに返信</string>
    <string name="dialog_regenerate">俳句を再生成</string>
    <string name="dialog_favorite">お気に入りに登録</string>
    <string name="dialog_confirm_logout_title">確認 - ログアウト</string>
    <string name="dialog_confirm_logout_message">ログアウトします。よろしいですか？</string>
    <string name="sliding_tab_title_timeline">TIMELINE</string>
    <string name="sliding_tab_title_search">SEARCH</string>
    <string name="sliding_tab_title_users">USERS</string>
    <string name="tweet_activity_subtitle">ツイート</string>
    <string name="reply_activity_subtitle">リプライ</string>
    <string name="regenerate_activity_subtitle">俳句生成</string>
    <string name="help_activity_subtitle">ヘルプ</string>
    <string name="login_activity_subtitle">ログイン</string>
    <string name="setting_activity_subtitle">設定</string>
    <string name="credit_activity_subtitle">クレジット</string>
    <string name="setting_haiku">俳句を生成しない</string>
    <string name="setting_title_yahoo">YahooAPIの設定</string>
    <string name="setting_title_haiku">俳句生成の設定</string>
    <string name="setting_btn_cancel">キャンセル</string>
    <string name="setting_btn_save">設定を保存</string>
    <string name="success_retweet">リツイートに成功しました</string>
    <string name="success_tweet">ツイートに成功しました</string>
    <string name="success_reply">返信に成功しました</string>
    <string name="success_haikuRetweet">俳句リツイートに成功しました</string>
    <string name="success_login">ログインに成功</string>
    <string name="success_fav">お気に入りに追加しました</string>
    <string name="error_normal">エラーが発生しました</string>
    <string name="toast_list_is_null">表示するツイートがありません</string>
    <string name="error_tweet_timeline">Twitterエラー：取得できませんでした</string>
    <string name="error_empty_text">テキストを入力してください</string>
    <string name="error_too_long_text">文字数オーバーです</string>
    <string name="credit_tweetokashi">ついいとおかし(TweetOkashi) Copyright © 2015 SignalYellow(@signalyellowsho).  All rights reserved.</string>
    <string name="credit_title_yahoo_api">Yahoo Web API</string>
    <string name="credit_title_library">利用しているライブラリやサービス</string>
    <string name="credit_yahoo_api_user">このアプリケーションではYahooテキスト解析APIを利用しています</string>
    <string name="credit_yahoo_api_url">Webサービス by Yahoo! JAPAN（ http://developer.yahoo.co.jp/about ）</string>
    <string name="credit_yahoo_api_raw_url">http://developer.yahoo.co.jp/about</string>
    <string name="credit_goo_api_text_en">supported by goo</string>
    <string name="credit_goo_api_text">このアプリケーションではgooラボAPIを利用しています</string>
    <string name="credit_goo_api_url">supported by goo( http://www.goo.ne.jp/ )</string>
    <string name="credit_title_goo_api">gooラボAPI</string>
    <string name="credit_title_twitter4j">twitter4j</string>
    <string name="credit_twitter4j">このアプリケーションでは、「Apache Licence 2.0（ http://www.apache.org/licenses/LICENSE-2.0 ）」
    に基づいてリリースされる「twitter4j( http://twitter4j.org/ ）」
        を利用しています</string>
    <string name="help_title_concept">概要</string>
    <string name="help_description_concept">
        この度は「ついいとおかし」をダウンロードいただきありがとうございます。
        このアプリはツイートからランダムに俳句を生成するアプリです。
    </string>
    <string name="help_title_haiku">生成される俳句について</string>
    <string name="help_description_haiku">
        このアプリ内では５・７・５の文章はすべて「俳句」ということとします。
        このアプリ内で生成される俳句は季語を必ず含むわけではないので厳密には俳句ではない場合があります。
        俳句はランダムに生成しているので同じ文章からでも違う俳句になる場合があります。
    </string>
    <string name="help_title_login">ログイン</string>
    <string name="help_description_login">
        このアプリではログインはOAUTHで行われます。
        ログインボタンを押し、Twitterサイトにて承認を行うことで自動的にアプリへ戻り、ログインが行われます。
        承認を行わずにアプリに手動で戻るとエラーとなる場合が有ります。その時ログインボタンを押しても反応しない場合はもう一度アプリを起動しなおしてログインしてください。

        \n
        ログアウトはアプリ内のアクションバー（タイトルが書いてある部分）の一番右にあるメニューボタンをクリックし、ログアウトをクリックしてください。


    </string>
    <string name="help_title_timeline">タイムライン(TIMELINE)</string>
    <string name="help_description_timeline">
        ユーザーのタイムラインを表示します。上の「更新ボタン」を押すことで更新を行い、
        リストの最後の「さらに表示」ボタンを押すことでより古いツイートを見ることが可能です。
        ストリーミングは行っていないので最新のツイートを見る場合は「更新ボタン」を押すことで更新を行ってください。


        \n
        タイムライン上のツイートをクリックすることで、返信、リツイート、そのツイートの作成者のタイムラインの表示、
        「俳句リツイート」、「俳句再生成」などを行うことができます。「俳句リツイート」「俳句再生成」については後述の説明をご覧ください。
    </string>
    <string name="help_title_haikuretweet">俳句リツイート</string>
    <string name="help_description_haikuretweet">
        俳句リツイートは、できた俳句にタグ(#ついいとおかし)を付加したものと
        元のツイートのURLを貼り付けたものをツイートします。

    </string>
    <string name="help_title_regenerate">俳句再生成</string>
    <string name="help_description_regenerate">
        タイムラインなどのツイートをクリックした後、「俳句を再生成」を押すことで俳句再生成画面に映ります。
        俳句再生成画面では「俳句再生成」ボタンを押すことで俳句を生成しなおすことが可能です。
        「俳句再生成」ボタンは何度でも押すことが可能です。
    </string>
    <string name="help_title_search">検索(SEARCH)</string>
    <string name="help_description_search">
        検索(SEARCH)ではキーワードを入力しツイートを検索することが可能です。
        良い俳句ができそうなキーワードを探してみましょう。
        ほかの部分は「タイムライン」の場合と同様です。
        ただ、更新ボタンはないので、同じキーワードで更新したい場合は
        再度同じキーワードをテキストボックスに入れたまま検索ボタンを押してください。
    </string>
    <string name="help_title_users">ユーザー(USERS)</string>
    <string name="help_description_users">
        ユーザー(USERS)画面では自分とフォローしているユーザーの自己紹介文を俳句にして表示しています。
    </string>
    <string name="help_title_tweet">ツイート</string>
    <string name="help_description_tweet">
        ツイートはアクションバーにある紙飛行機のようなアイコンをクリックすることで行うことができます。
        ツイート画面では、「ツイートや俳句生成」、「俳句リツイート」、「俳句のみツイート」を行うことができます。
        「俳句生成」は「俳句再生成」の項目を、「俳句リツイート」は「俳句リツイート」の項目をご覧ください。
        「俳句のみツイート」ではできた俳句にタグ(#ついいとおかし)を付加したものをツイートします。
    </string>
    <string name="help_title_error">エラーについて</string>
    <string name="help_description_error">
        リツイートやお気に入りに登録する際、エラーという表示が出ることがあります。これはもうそのツイートがリツイートやお気に入り済みの場合、
        またそのツイートが自分自身のものである場合に多くでます。特に重大な問題が発生しているわけではありません。このアプリにはリツイートやお気に入りを外す機能は現在ございませんので、
        Webや他のクライアントから外していただきますよう御願い致します。

        その他エラー等ございましたらTwitterアカウントやレポートなどで報告いただけるとありがたいです。よろしく御願いいたします。
    </string>
    <string name="test_name_long">あいうえおかきくけこさしすせそたちつてと</string>
    <string name="test_screenname_long">\@123456789012345</string>
    <string name="test_haiku_long">こんじょうの　こんじょうでしょう　こんじょうは</string>
    <string name="test_text">ここにツイートの文章が表示されます。
    この文章が表示されている場合このツイートの文章の取得に失敗しています。ネットワーク環境などをご確認ください</string>
    <string name="test_date">1991:07:25:19:11:11</string>
    <string name="test_rtcount">0</string>
    <string name="test_favcount">0</string>
    <string name="menu_refresh">更新</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_credit">CreditActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="title_activity_home_tweet">HomeTweetActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home_view">HomeViewActivity</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="title_activity_home_timeline">HomeTimelineActivity</string>
    <string name="title_activity_tweet_post">TweetPostActivity</string>
    <string name="title_activity_base_navigation_drawer">BaseNavigationDrawerActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
</resources>