<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.signalyellow.tweetokashi.activity.CreditActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_ja"
        android:textSize="@dimen/text_help_title"
        android:layout_marginTop="@dimen/help_margin_title_top"
        android:textStyle="bold"/>

    <TextView android:text="@string/credit_tweetokashi" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_title_library"
        android:textSize="@dimen/text_help_title"
        android:layout_marginTop="@dimen/help_margin_title_top"
        android:textStyle="bold"/>

    <TextView android:text="@string/credit_title_goo_api" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/help_margin_description_top"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/help_margin_description_top"
        android:text="@string/credit_goo_api_text"/>

    <ImageView
        android:layout_margin="@dimen/credit_yahoo_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/sgoo"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:text="@string/credit_goo_api_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:autoLink="web"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/help_margin_description_top"
        android:textStyle="bold"
        android:text="@string/credit_title_twitter4j" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_twitter4j"
        android:layout_marginTop="@dimen/help_margin_description_top"
        android:autoLink="web"

        />



</LinearLayout>