<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.signalyellow.tweetokashi.activity.HomeActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/menu_help" android:title="@string/menu_setting" />



    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>

    <item
        android:id="@+id/menu_tweet"
        android:icon="@drawable/ic_send_white_24dp"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/menu_refresh"/>

</menu>
