<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.signalyellow.tweetokashi.activity.TweetActivity"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:padding="@dimen/item_tweet_padding">

        <com.loopj.android.image.SmartImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/icon"
            android:layout_marginLeft="@dimen/text_name_margin_left"
            android:layout_toRightOf="@+id/icon"
            android:text="@string/test_name_long"
            android:textSize="@dimen/text_name_size"
            />
        <TextView
            android:id="@+id/screen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_toRightOf="@+id/icon"
            android:layout_marginLeft="@dimen/text_name_margin_left"
            android:layout_alignParentRight="true"
            android:text="@string/test_screenname_long"
            android:textSize="@dimen/text_name_size"
            android:textColor="@color/text_sub_color"
            />

        <TextView
            android:layout_marginTop="@dimen/text_margin_top"
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name"
            android:layout_below="@+id/screen_name"
            android:text="@string/test_text"

            />

        <TextView
            android:id="@+id/datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_date"
            android:layout_below="@+id/text"
            android:gravity="right"
            android:textSize="@dimen/text_date_size"
            android:textColor="@color/text_sub_color"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/haiku_retweet_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_haiku_retweet"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/haiku_regenerate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_haiku_regenerate"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_tweet_padding"
        android:orientation="vertical">

        <TextView

            android:layout_marginTop="@dimen/text_haiku_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_haiku_result"/>


        <TextView
            android:id="@+id/haiku_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_haiku_size"
            android:textStyle="bold"

            android:layout_marginTop="@dimen/text_margin_top"
            android:text="@string/test_haiku_long"/>
    </LinearLayout>










</LinearLayout>