<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.signalyellow.tweetokashi.activity.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.signalyellow.tweetokashi.activity.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.signalyellow.tweetokashi.activity.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="com.signalyellow.tweetokashi.activity.SettingsActivity$HaikuPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="Haiku"
        />

</preference-headers>
