<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.signalyellow.tweetokashi.activity.ReplyActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_tweet_padding">

        <com.loopj.android.image.SmartImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/icon"
            android:layout_marginLeft="@dimen/text_name_margin_left"
            android:layout_toRightOf="@+id/icon"
            android:text="@string/test_name_long"
            android:textSize="@dimen/text_name_size"
            />
        <TextView
            android:id="@+id/screen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_toRightOf="@+id/icon"
            android:layout_marginLeft="@dimen/text_name_margin_left"
            android:layout_alignParentRight="true"
            android:text="@string/test_screenname_long"
            android:textSize="@dimen/text_name_size"
            android:textColor="@color/text_sub_color"
            />

        <TextView
            android:layout_marginTop="@dimen/text_margin_top"
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name"
            android:layout_below="@+id/screen_name"
            android:text="@string/test_text"

            />

        <TextView
            android:id="@+id/datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_date"
            android:layout_below="@+id/text"
            android:gravity="right"
            android:textSize="@dimen/text_date_size"
            android:textColor="@color/text_sub_color"/>

        <TextView
            android:id="@+id/haiku_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datetime"
            android:text="@string/test_haiku_long"
            android:textSize="@dimen/text_haiku_size"
            android:textStyle="bold"
            android:gravity="center"/>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <EditText
            android:id="@+id/tweetEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/text_hint_input"
            android:minLines="3"
            android:maxLines="6"/>

        <TextView
            android:id="@+id/tweet_text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_count_margin"
            android:layout_marginEnd="@dimen/text_count_margin"
            android:layout_marginBottom="@dimen/text_count_margin"
            android:layout_alignBottom="@+id/tweetEditText"
            android:layout_alignRight="@id/tweetEditText"
            android:layout_alignEnd="@id/tweetEditText" />

    </RelativeLayout>

    <Button
        android:id="@+id/tweet_button"
        android:text="@string/btn_reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
